--- a/css/style.css
+++ b/css/style.css
@@ -29,26 +29,35 @@ body {
 }
 
 p {
-  font-weight: var(--light-font);
+  font-weight: var(--mid-font);
+  color: var(--gray-blue);
 }
 
 .heading-primary {
   margin-bottom: 1.5rem;
   font-size: 3rem;
+  color: var(--dark-blue);
 }
 
 .heading-secondary {
   margin-bottom: 1.2rem;
+  color: var(--dark-blue);
 }
 
 .heading-tertiary {
   font-weight: var(--light-font);
   font-size: 3rem;
+  color: var(--gray-blue);
 }
 
 .intro {
   text-align: center;
-  margin: 5rem 50rem;
+  margin: 4rem 0;
+}
+
+.intro p {
+  width: 32%;
+  margin: 0 auto;
 }
 
 .cards {
@@ -56,8 +65,7 @@ p {
   justify-content: center;
   align-items: center;
   gap: 3rem;
-
-  margin: 0 15rem;
+  margin: 0 18rem 8rem;
 }
 
 .flex-1-row {
@@ -72,8 +80,8 @@ p {
 }
 
 .card {
-  padding: 4rem;
-  box-shadow: 5px 5px 5px 1px;
+  padding: 2rem;
+  box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.25);
 }
 
 .card p {
