--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
   --gray-blue: hsl(229, 6%, 66%);
   --light-gray: hsl(0, 0%, 98%);
 
+  --box-shadow: 6px 8px 24px hsla(234, 12%, 34%, 0.15)
+
   --light-font: 200;
   --mid-font: 400;
   --strong-font: 600;
@@ -21,6 +23,7 @@
 
 html {
   font-size: 62.5%;
+  max-height: 100vh;
 }
 
 body {
@@ -47,7 +50,7 @@ p {
 .heading-tertiary {
   font-weight: var(--light-font);
   font-size: 3rem;
-  color: var(--gray-blue);
+  color: var(--dark-blue);
 }
 
 .intro {
@@ -56,8 +59,7 @@ p {
 }
 
 .intro p {
-  width: 32%;
-  margin: 0 auto;
+  margin: 0 50rem;
 }
 
 .cards {
@@ -65,7 +67,7 @@ p {
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  margin: 0 18rem 8rem;
+  margin: 0 18rem 2rem;
 }
 
 .flex-1-row {
@@ -81,7 +83,7 @@ p {
 
 .card {
   padding: 2rem;
-  box-shadow: 10px 10px 40px rgba(0, 0, 0, 0.25);
+  box-shadow: 6px 8px 24px hsla(234, 12%, 34%, 0.15)
 }
 
 .card p {
@@ -112,6 +114,7 @@ p {
 
 .attribution {
   text-align: center;
+  font-size: 1rem;
 }
 
 .attribution a {
@@ -120,11 +123,35 @@ p {
 }
 /* MEDIA QUERIES */
 
-@media (max-width: 1440px) {
-}
 
 @media (max-width: 375px) {
+  .heading-primary {
+    font-size: 2.4rem;
+  }
+
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+
+  .intro {
+    margin: 5rem 2rem;
+  }
+
+  .intro p {
+    font-size: 1.4rem;
+    margin: 0 1.7rem;
+  }
   .cards {
     flex-direction: column;
+    margin: 0 3rem 2rem;
+  }
+
+  .cards p {
+    padding-right: 0;
+  }
+
+  img {
+    height: 52px;
+    aspect-ratio: 1;
   }
 }
